# l2_makerspace

./: .gitignore  .gitmodules  README.md  build_local.sh  cloud_bootstrap.sh  local_bootstrap.sh  mount_raspi.sh  run_local.sh
ar3/: devlog.md  docker-compose.yml  gamepad_sim_launch.sh  launch_headless_sim.sh  log.md  tribot_headless_launch.sh  webots_sim_launch.sh
ar3/assets/: trashbot_wheel_gear.FCStd  trashbot_wheel_gear.FCStd1
ar3/breakout/: breakout  breakout-cache.lib  breakout.kicad_pcb  breakout.kicad_pcb-bak  breakout.net  breakout.pro  breakout.sch  breakout.sch-bak  empty_layout.kicad_wks  fp-info-cache  sym-lib-table
ar3/control/: Dockerfile  README.md  broker.py  docker-compose.yml  encoder.ino  gamepad.py  index.html  motion.py  native_client.py  polar_line.js  polar_line_test.html  sock2ser.py  telemetry.py
ar3/display/: .gitignore  Dockerfile  README.md  docker-compose.yml  example_config.json  index.html  platformio.ini  run_docker.sh  run_native.sh  test_ws.py
ar3/firmware/: Dockerfile  docker-compose.yml  platformio.ini
ar3/sim/: Dockerfile  Dockerfile.moveit  README.md  docker-compose.yml  moveit.py  node.py  package.xml  telemetry.py
ar3/status_firmware/: README.md  platformio.ini
base/: Dockerfile
create/: casting.md  subtractive.md  teleoperation.md  thin_film.md
create/cardboard/: README.md
create/pcb/: README.md
create/publishing/: README.md
create/subtractive/: README.md
docs/: bootstrap.md  design.md  docker.md  docs_stack.md  tech_stack.md  virtual.md
docs/work/: 3d_vr.md  icon.md  pxe_raspi.md  robot_demo.md
generate/recommender/: README.md
infra/: README.md
infra/app/: Dockerfile  README.md  actions.js  build.sh  docker-compose.yml  docker_script.sh  index.html  index.js  launch.sh  package-lock.json  package.json  render.js  rosbridge.js  store.js
infra/base/: Dockerfile  README.md  base-compose.yml  build.sh  docker-compose-sim.yml  docker-compose.yml  pull_from_registry.sh  push_to_registry.sh  submit_build.sh
infra/base/l2_msgs/: CMakeLists.txt  package.xml
infra/base/l2_msgs/action/: L2Sequence.action
infra/base/l2_msgs/msg/: Environment.msg  L2Actor.msg  L2Event.msg  L2Role.msg  L2Sequence.msg  L2SequenceArray.msg  L2SequenceItem.msg  Material.msg  Object3D.msg  Object3DArray.msg  Part.msg  Project.msg  ProjectItem.msg  Projects.msg  Simulation.msg  Step.msg  VRLockStatus.msg  VRPlayers.msg
infra/base/l2_msgs/msg/tasks/: Item.msg
infra/base/l2_msgs/src/: gen_ts.py
infra/base/l2_msgs/srv/: GetFile.srv  GetObject3D.srv  GetProject.srv  L2Actor.srv  L2Project.srv  L2ProjectItem.srv  L2SearchProjects.srv  ListFiles.srv  Object3D.srv  PushParameter.srv  PutFile.srv  RemoveObject3D.srv  SpawnObject3D.srv
infra/base/l2_msgs/srv/optimize/: AddPrimitive.srv
infra/base/l2_msgs/srv/remote/: PushObject3D.srv
infra/base/l2_msgs_sim/: CMakeLists.txt  package.xml
infra/base/l2_msgs_sim/msg/: Block.msg  Material.msg  Part.msg  Step.msg
infra/base/l2_msgs_sim/srv/: AddPrimitive.srv
infra/base/l2_msgs_vr/: CMakeLists.txt  package.xml
infra/base/l2_msgs_vr/msg/: ROSState.msg
infra/browser/: README.md  manifest.json  popup.js
infra/ros/: Dockerfile  build.sh  docker-compose.yml  launch.sh  ros_listen_example.sh
infra/storage/: Dockerfile  build.sh  docker-compose.yml
infra/tasks/: Dockerfile  build.sh  docker-compose.yml  launch.sh
infra/timelapse/: README.md  build.sh  capture.py  capture_hls.py  capture_urllib.py  network_av  network_av.cc  network_av.py  run.sh  test_h264_realsense.sh
infra/vdi/: docker-compose.yml
infra/virtual_desktop/: README.md  set_workspace_name.py  switch_workspace.py
infra/vr/: README.md  client.conf  launch_fab.sh
ir_spec/: pca.py
ir_spec/src/: main.ino
optimize/: additive.md  reverser.md  sheet_structure.md  textiles.md
optimize/additive/: README.md
optimize/optimizer/: Dockerfile  build.sh  optimizer.md  test_freecad.py
optimize/reverser/: reverser.md
ros/: Dockerfile
rpi/: Dockerfile  README.md
server/: README.md
server/ros/: listen.sh  (+1 more)
storage/: Dockerfile  docker-compose.yml
templates/: Dockerfile
vr/: Dockerfile  README.md  launch.sh
work/: 3d_vr.md  icon.md  msg.md  pxe_raspi.md
(+675 files in other folders)
